<resources>
    <string name="app_name">Disoft</string>
    <string name="txt_1">Código</string>
    <string name="txt_2">Número de carnet</string>
    <string name="txt_3">Entrar</string>
    <string name="txt_4">Agregar cliente</string>
    <string name="txt_5">Realizar pedido</string>
    <string name="txt_6">Salir</string>
    <string name="txt_7">Historial de pedidos</string>
    <string name="txt_8">Detalle</string>
    <string name="txt_9">Nuevo cliente</string>
    <string name="txt_10">Nuevo pedido</string>
    <string name="txt_11">Producto</string>
    <string name="txt_12">Precio</string>
    <string name="txt_13">Nombre de cliente</string>
    <string name="txt_14">Fecha de pedido</string>
    <string name="txt_15">Estado de pedido</string>
    <string name="txt_16">Razón social</string>
    <string name="txt_17">Nit/CI</string>
    <string name="txt_18">Correo electronico</string>
    <string name="txt_19">Telefono</string>
    <string name="txt_20">Ubicación</string>
    <string name="txt_23">Nit</string>
    <string name="txt_24">Observación</string>
    <string name="txt_25">Cantidad</string>
    <string name="txt_26">Total</string>
    <string name="txt_27">Tipo de pago</string>
    <string name="txt_28">Contado</string>
    <string name="txt_29">Crédito</string>
    <string name="txt_30">Mapa</string>
    <string name="txt_31">Olvidó escribir su código o número de carnet</string>
    <string name="txt_32">Número de carnet incorrecto</string>
    <string name="txt_33">Código incorrecto</string>
    <string name="txt_34">Cierre de sesión ha fallado</string>
    <string name="txt_35">No se pudo obtener el detalle de la zona</string>
    <string name="txt_36">No se pudo obtener la zona</string>
    <string name="txt_37">No se pudo obtener las cabezeras de los pedidos</string>
    <string name="txt_38">No se pudo guardar las cabezeras de los pedidos</string>
    <string name="txt_39">No se pudo obtener el detalle de los pedidos</string>
    <string name="txt_40">No se pudo guardar el detalle de los pedidos</string>
    <string name="txt_41">No se pudo obtener los productos</string>
    <string name="txt_42">No se pudo guardar los productos</string>
    <string name="txt_43">No se pudo obtener los clientes</string>
    <string name="txt_44">No se pudo guardar los clientes</string>
    <string name="txt_45">No de pudo establecer conexión con el servidor, intente nuevamente</string>
    <string name="txt_46">No de pudo actualizar el estado del usuario</string>
    <string name="txt_47">Por favor espere un momento</string>
    <string name="txt_48">Cargando la información</string>
    <string name="txt_49">Aceptar</string>
    <string name="txt_50">Cancelar</string>
    <string name="txt_51">Aviso</string>
    <string name="txt_52">Esta seguro que desea cambiar el estado del pedido a entregado?</string>
    <string name="txt_53">Actualizando estado del pedido</string>
    <string name="txt_54">No se pudo actualizar el estado en el servidor</string>
    <string name="txt_55">No se pudo actualizar el estado en la base de datos</string>
    <string name="txt_56">Pedido actualizado</string>
    <string name="txt_57">CANT.</string>
    <string name="txt_58">P.UNT.</string>
    <string name="txt_59">DETALLE</string>
    <string name="txt_60">SUB TOTAL</string>
    <string name="txt_61">Factura</string>
    <string name="txt_62">Obteniendo información de la factura</string>
    <string name="txt_63">Water Delivery</string>
    <string name="txt_64">Nuevo Pedido</string>
    <string name="txt_65">Los datos de la factura no pudieron ser generados</string>
    <string name="txt_66">Los datos de la factura no pudieron ser guardados</string>
    <string name="txt_67">Generando factura</string>
    <string name="txt_68">El monto introducido es mayor o igual al total</string>
    <string name="txt_69">Presione aquí</string>
    <string name="txt_70">Seleccione fecha</string>
    <string name="txt_71">Nuevo producto</string>
    <string name="txt_72">Producto o cantidad invalida</string>
    <string name="txt_73">Seleccione opción</string>
    <string name="txt_74">Nueva cantidad</string>
    <string name="txt_75">Registrando datos de nuevo cliente</string>
    <string name="txt_76">No se pudo registrar el nuevo cliente</string>
    <string name="txt_77">Registrando datos</string>
    <string name="txt_78">Pedido guardado exitosamente</string>
    <string name="txt_79">El pedido no pudo ser guardado</string>
    <string name="txt_80">Guardando nuevo pedido</string>
    <string name="txt_81">Registro de cliente exitoso</string>
    <string name="txt_82">Hay campos vacios</string>
    <string name="txt_83">Dirección</string>
    <string name="txt_84">Bluetooth desactivado</string>
    <string name="txt_85">No se pudo conectar con la impresora</string>
    <string name="txt_86">Impresión exitosa</string>
    <string name="txt_87">Imprimiendo factura</string>
    <string name="txt_88">No se sincronizo la impresora</string>
    <string name="txt_89">Respaldo de la factura no se pudo guardar en la nube</string>
    <string name="txt_90">Imprimiendo recibo</string>
    <string name="txt_91">Respaldo de la recibo no se pudo guardar en la nube</string>
</resources>
