<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/ll_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_item_home">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textSize="@dimen/font_size_buttons_body"
                android:textColor="@color/color_3"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/txt_11"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textSize="@dimen/font_size_buttons_body"
                android:textColor="@color/color_3"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/txt_25"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textSize="@dimen/font_size_buttons_body"
                android:textColor="@color/color_3"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/txt_12"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_product_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:textSize="@dimen/font_size_buttons_body"
                android:textColor="@color/color_3"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/txt_26"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_dots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.8"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>