<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:id="@+id/fragment_login"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:gravity="center"
                android:textColor="@color/color_1"
                android:textSize="@dimen/font_size_appbar"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin"
            android:focusableInTouchMode="true" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColorHint="@color/color_1">

                <EditText
                    android:id="@+id/input_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_1"
                    android:textColor="@color/color_1"
                    android:inputType="number"
                    android:textSize="@dimen/font_size_buttons_body"
                    android:fontFamily="sans-serif"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_1">

                <EditText
                    android:id="@+id/input_identity_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_2"
                    android:textColor="@color/color_1"
                    android:inputType="number"
                    android:textSize="@dimen/font_size_buttons_body"
                    android:fontFamily="sans-serif"/>
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_3"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/margin"
                android:textColor="@color/color_1"
                android:textSize="@dimen/font_size_buttons_body"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>